log
Thu 09 Mar 2023 04:19:49 PM UTC: 
 tests:  0|7
total_score: 0/70
f72b708
Thu 16 Mar 2023 03:14:43 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
6ad5640
Thu 16 Mar 2023 03:24:30 PM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:28:7: error: ‘max’ redeclared as different kind of symbol
   28 |   int max=0;
      |       ^~~
exercises.c:27:38: note: previous definition of ‘max’ was here
   27 | void arrayMaxMin(int *a, int n, int *max, int *min) {
      |                                 ~~~~~^~~
exercises.c:29:7: error: ‘min’ redeclared as different kind of symbol
   29 |   int min = *a[0];
      |       ^~~
exercises.c:27:48: note: previous definition of ‘min’ was here
   27 | void arrayMaxMin(int *a, int n, int *max, int *min) {
      |                                           ~~~~~^~~
exercises.c:29:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   29 |   int min = *a[0];
      |             ^~~~~
exercises.c:32:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |       if(*a[i]>max)
      |          ^~~~~
exercises.c:34:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |         max=*a[i];
      |             ^~~~~
exercises.c:36:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   36 |       if(*a[i]<min)
      |          ^~~~~
exercises.c:38:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   38 |         min=*a[i];
      |             ^~~~~
Compilation failed
f5452d2
Thu 16 Mar 2023 03:25:07 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:29:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   29 |   *min = *a[0];
      |          ^~~~~
exercises.c:32:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |       if(*a[i]>*max)
      |          ^~~~~
exercises.c:34:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |         *max=*a[i];
      |              ^~~~~
exercises.c:36:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   36 |       if(*a[i]<*min)
      |          ^~~~~
exercises.c:38:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   38 |         *min=*a[i];
      |              ^~~~~
Compilation failed
c6dc295
Thu 16 Mar 2023 03:26:54 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
2d866d5
Thu 16 Mar 2023 03:34:41 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:27: error: expected expression before ‘]’ token
   62 |   strcpy(p->nombre,nombre[]);
      |                           ^
exercises.c:63:22: error: expected expression before ‘]’ token
   63 |   strcpy(p->rut, rut[]);
      |                      ^
Compilation failed
e0e847b
Thu 16 Mar 2023 03:34:58 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
28d3ba0
Thu 16 Mar 2023 03:38:31 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:82:11: error: unused variable ‘v’ [-Werror=unused-variable]
   82 |   Vector *v = (Vector *) calloc(n, sizeof(Vector));
      |           ^
cc1: all warnings being treated as errors
Compilation failed
214d422
Thu 16 Mar 2023 03:39:27 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:83:9: error: invalid operands to binary == (have ‘Vector’ and ‘void *’)
   83 |   if(*v == NULL) exit(EXIT_FAILURE);
      |      ~~ ^~
      |      |
      |      Vector
exercises.c:84:11: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   84 |    return *v;
      |           ^~
exercises.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
80217e3
Thu 16 Mar 2023 03:39:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:84:11: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   84 |    return *v;
      |           ^~
exercises.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9161a7a
Thu 16 Mar 2023 03:39:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
cd43a8d
Thu 16 Mar 2023 03:44:40 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
fbe70b9
Thu 16 Mar 2023 03:45:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
7fb3f4e
Thu 16 Mar 2023 03:50:22 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:95:11: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   95 |   v [i] = valor;
      |           ^~~~~
Compilation failed
c3edcbe
Thu 16 Mar 2023 03:52:39 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
52b860e
Thu 16 Mar 2023 03:54:07 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
5f1b39b
Thu 16 Mar 2023 03:57:10 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:114:7: error: ‘j’ undeclared (first use in this function)
  114 |   for(j =0 ; j< 3 ; j++)
      |       ^
exercises.c:114:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7459b56
